# ai-provider-sdk

./: .env.example  .gitignore  Cargo.toml  README.md  openai.env.example  package.json  pnpm-lock.yaml
.github/workflows/: docs-pages.yml
crates/ai-core/: Cargo.toml
crates/ai-core/src/: lib.rs
crates/ai-provider/: Cargo.toml
crates/ai-provider-openai/: Cargo.toml
crates/ai-provider-openai/examples/: embed_openai.rs  generate_image_openai.rs  generate_text_openai.rs  speech_openai.rs  stream_text_openai.rs  transcribe_openai.rs
crates/ai-provider-openai/src/: lib.rs
crates/ai-provider-openai/tests/: http.rs
crates/ai-provider-utils/: Cargo.toml
crates/ai-provider-utils/src/: lib.rs
crates/ai-provider/src/: lib.rs
docs/: index.md
docs/.vitepress/: config.mts  config.ts
docs/.vitepress/theme/: style.css
docs/api/: chat.md  cli.md  embeddings.md  files.md  models.md  moderations.md  progress.md  resources.md  responses.md  streaming.md  webhooks.md
docs/guide/: architecture.md  configuration.md  errors.md  getting-started.md  openai.md  overview.md
docs/reference/: packages.md
examples/: README.md  chat.rs  files_create.rs  models.rs  models_list.rs  responses_create.rs  responses_stream.rs
examples/common/: mod.rs
examples/resources/: models_list.rs  models_retrieve.rs  models_retrieve_with_options.rs
src/: client.rs  error.rs  lib.rs  pagination.rs  path.rs  request_options.rs  sse.rs  streaming.rs  transport.rs  workload.rs
src/openai/: chat.rs  core.rs  files.rs  generic.rs  mod.rs  responses.rs  webhooks.rs
src/resources/: chat.rs  embeddings.rs  files.rs  mod.rs  models.rs  moderations.rs  responses.rs
src/types/: chat.rs  embeddings.rs  files.rs  mod.rs  models.rs  moderations.rs  responses.rs
tests/: client_contract.rs  openai.rs  test_models.rs
tests/api_resources/: chat.rs  embeddings.rs  files.rs  mod.rs  models.rs  moderations.rs  responses.rs
tests/common/: mod.rs
tests/test_support/: errors.rs  mod.rs  request_options.rs  retries.rs  streaming.rs
