[package]
name = "ai-provider-sdk"
version = "0.0.2"
edition = "2021"
description = "Async-first Rust SDK for OpenAI APIs"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/Lume98/ai-provider-sdk"

[dependencies]
async-stream = "0.3"
bytes = "1"
futures-core = "0.3"
futures-util = "0.3"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "time"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
httpmock = "0.7"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread"] }
