[workspace]
members = [
  "crates/ai-provider",
  "crates/ai-provider-utils",
  "crates/ai-core",
  "crates/ai-provider-openai",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/vercel/ai"
rust-version = "1.95"

[workspace.dependencies]
ai-core = { path = "crates/ai-core" }
ai-provider = { path = "crates/ai-provider" }
ai-provider-openai = { path = "crates/ai-provider-openai" }
ai-provider-utils = { path = "crates/ai-provider-utils" }
async-trait = "0.1"
bytes = "1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
wiremock = "0.6"
