[package]
name = "ai-provider-openai"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ai-provider.workspace = true
ai-provider-utils.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
ai-core.workspace = true
tokio.workspace = true
wiremock.workspace = true
